# parallel_data

./: CMakeLists.txt
lab1/: task2.cpp
lab10/: run_1.sh  run_2.sh  task1.cpp  task2.cpp
lab2/: task2.cpp  task4.cpp
lab3/: task6.cpp
lab4/: task6.cpp
lab5/: task1.cpp  task2.cpp
lab6/Lin_Solv_Lapack/: Lin_Solv_Lapack.cpp
lab6/Matr_Mult_BLAS/: Matr_Mult_BLAS.cpp
lab6/task1/Matr_Mult/: Matr_Mult.cpp
lab7/: task2.cpp  task4.cpp  task6.cpp
lab8/: task2.cpp  task4.cpp  task6.cpp
lab9/: task2.cpp  task4.cpp  task6.cpp
task1/: task2.h  task4.cpp  task4.h  task6.cpp  task6.h
task2/: task2.h  task4.cpp  task4.h  task6.cpp  task6.h
task3/: task2.cpp  task4.cpp  task4.h  task6.cpp  task6.h
task4/: task2.cpp  task2.h  task4.cpp  task6.cpp  task6.h
